Closed Bug 799910 Opened 13 years ago Closed 13 years ago

Fix ASCII range of EUC-KR and Big5 converters

Categories

(Core :: Internationalization, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla19

People

(Reporter: emk, Assigned: emk)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

EUC-KR and Big5 decoders have no mapping for 0x7F.
Attached patch patchSplinter Review
I also merged duplicate tables.
Attachment #669930 - Flags: review?(smontagu)
Attachment #669930 - Flags: review?(smontagu) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: