Bug 799910 - Fix ASCII range of EUC-KR and Big5 converters. r=smontagu