intl/uconv/src/nsUConvModule.cpp
@@ -486,10 +486,6 @@ const uint16_t g_ufBig5HKSCSMapping[] = {
 #include "hkscs.uf"
 };
 
-const uint16_t g_ASCIIMapping[] = {
-  0x0001, 0x0004, 0x0005, 0x0008, 0x0000, 0x0000, 0x007F, 0x0000
-};
-
 const uint16_t g_utBig5HKSCSMapping[] = {
 #include "hkscs.ut"
 };
@@ -501,10 +497,6 @@ const uint16_t g_utKSC5601Mapping[] = {
 
 const uint16_t g_ufKSC5601Mapping[] = {
 #include "u20kscgl.uf"
-};
-
-const uint16_t g_ucvko_AsciiMapping[] = {
-  0x0001, 0x0004, 0x0005, 0x0008, 0x0000, 0x0000, 0x007F, 0x0000
 };
 
 const uint16_t g_HangulNullMapping[] ={
