intl/uconv/ucvko/nsJohabToUnicode.cpp
@@ -31,7 +31,7 @@ static const uint16_t g_utJohabJamoMapping[] ={
 };
 
 static const uint16_t *g_JOHABMappingTableSet [] ={
-  g_ucvko_AsciiMapping,
+  g_ASCIIMappingTable,
   g_HangulNullMapping,
   g_utJohabJamoMapping,
   g_utKSC5601Mapping,
